# funding-scout-oss

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/systemd/: funding-scout-daily-report.service  funding-scout-daily-report.timer  funding-scout-snapshot.service  funding-scout-watchdog.service  funding-scout-watchdog.timer  funding-scout-web.service
docs/: MEMORY.md  api.md  arbitrage_strategies.md  concept.md  data_observations.md  deployment.md  exchange_universe.md  exchanges.md  execution_model.md  fundoor_and_channel.md  mvp_v01_state.md  position_lifecycle.md  positions.md  product_concept.md  risk.md  risk_framework.md  stack.md  strategies.md  tech_stack.md  user_framework.md
scripts/: sync-memory-to-docs.sh  watchdog.sh
src/funding_scout/: __init__.py  cli.py  config.py  reporting.py
src/funding_scout/connectors/: __init__.py  base.py  edgex.py  hyperliquid.py  lighter.py  pacifica.py
src/funding_scout/detectors/: __init__.py  base.py  cross_dex_same_ticker.py
src/funding_scout/ev/: __init__.py  base.py  costs.py
src/funding_scout/notify/: __init__.py  telegram.py
src/funding_scout/snapshot/: __init__.py  runner.py
src/funding_scout/storage/: __init__.py  db.py  models.py
src/funding_scout/survival/: __init__.py  estimator.py  service.py  windows.py
src/funding_scout/web/: app.py  data.py  layout.py
tests/: conftest.py  test_cli.py  test_connectors_base.py  test_detector_cross_dex.py  test_edgex.py  test_ev.py  test_hyperliquid.py  test_lighter.py  test_notify_telegram.py  test_pacifica.py  test_reporting.py  test_smoke_real_hl.py  test_snapshot_runner.py  test_storage.py  test_survival_estimator.py  test_survival_service.py  test_survival_windows.py  test_web_api.py  test_web_data.py  test_web_decay.py
