[project]
name = "funding-scout"
version = "0.1.0"
description = "DEX-only funding-rate arbitrage scout — EV-калькулятор связок"
requires-python = ">=3.12"
authors = [{ name = "internal" }]
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "dash>=2.18",
    "dash-ag-grid>=31",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
funding-scout = "funding_scout.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funding_scout"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
